<resources>
    <string name="app_name">EscapeTheSun</string>
    <string name="app_login_id">이름 혹은 전화번호(Name or Phone number)</string>
    <string name="app_login_pw">패스워드(Password)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="host">192.168.0.1</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">태양을 피하고 싶었어</string>
    <string name="app_discription">온열 손상 방지를 위한 IOT</string>
    <string name="device_connect">태피하 연결 시작하기</string>
    <string name="app_now_searching_device">기기를 찾는 중 입니다!</string>
    <string name="app_searching_finish">찾았습니다! 바로 연결 가능합니다.</string>
    <string name="app_start">시작하기</string>
    <string name="app_signup">회원가입</string>
    <string name="app_auto_login">자동 로그인</string>
    <string name="app_logout">로그아웃</string>
    <string name="app_login">로그인</string>
    <string name="nav_menu_01">BlueTooth Setting</string>
    <string name="nav_menu_02">Sensor Data</string>
    <string name="nav_menu_03">Emergency network</string>
    <string name="nav_menu_04">Setting</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <string name="read_state">Read Manufacturer Name</string>
    <string name="turn_off_led">Read Serial Number</string>
    <string name="turn_on_led">Write Alert Level</string>
    <string name="app_communication">고객센터</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_name">BLE Chat Service</string>
    <string name="settings_background_service">Run in background</string>
    <string name="settings_iot_guide">\nBT Chat automatically sends HTTP GET request to specified server if there is a string like below.</string>
    <string name="settings_copyrights">\n\nFind more at http://www.hardcopyworld.com</string>
    <string name="title_example">BLE Chat</string>
    <string name="title_ll_settings">Settings</string>
    <string name="ui_send">Send</string>
    <string name="bt_title">Bluetooth</string>
    <string name="bt_state_init">initializing</string>
    <string name="bt_state_wait">waiting.. (select a device manually)</string>
    <string name="bt_state_connect">connecting</string>
    <string name="bt_state_connected">connected</string>
    <string name="bt_state_error">error</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled. Set the bluetooth on at phone settings.</string>
    <string name="bt_cmd_sending_error">Transaction failed</string>
    <string name="bt_ble_not_supported">This device doesn\'t support BLE. Cannot start app.</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connect">Connect\na device</string>
    <string name="discoverable">Make\ndiscoverable</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="bluetooth_stat_text">Select SCAN button and click the SUN device</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_data_read">DataReadActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_add_call_list">Add Phone number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emg_lv01_text">위험 상황 발생 시 부저가 울리며 사용자 반응이 없을 경우 긴급 문자 메시지를 자동으로 전송합니다</string>
    <string name="emg_lv01_text00">야외활동을 하기 좋은 날입니다</string>
    <string name="emg_lv01_text01">온열질환에 약간의 위험이 있습니다. 열경련이나 열실신이 의심되니 쉬면서 다니세요!</string>
    <string name="emg_lv01_msg01">열경련이나 열실신의 가벼운 온열 질환이 의심됩니다.</string>
    <string name="emg_lv01_text02">더운 날씨에 너무 오래 야외에 있으신건 아닌가요? 일사병이 발생 할 수 있으니 조금 쉬시는걸 추천합니다</string>
    <string name="emg_lv01_msg02">다소 오랜 시간 고온에 노출되어 일사병이 의심됩니다.</string>
    <string name="emg_lv01_text03">외부 환경과 신체지수가 많이 위험해 보입니다. 열사병의 위험이 있으니 조심하셔야 합니다!</string>
    <string name="emg_lv01_msg03">체온이 낮고 오랜 기간 고온에 노출되어 열사병이 의심됩니다.</string>
    <string name="emg_lv02_text">현 상황에서 특이사항 없음</string>
    <string name="emg_lv02_text00">지금 처럼 쉬어주면 온열 질환을 예방할 수 있습니다</string>
    <string name="emg_lv02_text01">계속 움직이시면 위험할 수도 있어요.</string>
    <string name="emg_lv02_text02">좀 더 시원한 곳에서 쉬시는걸 추천합니다. 하지만 지금 의식이 있으신지 의심됩니다. 버저 버튼을 눌러주세요!</string>
</resources>