<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/idInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@color/colorMyCpText"
            android:hint="@string/app_login_id"
            android:textSize="14sp">

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/idInput"
            android:layout_margin="3dp"
            android:background="@color/colorMyCpText"
            android:hint="@string/app_login_pw"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordInput"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/signupButton"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/app_login"
                android:textAllCaps="false"
                android:textColor="@color/colorMyCpText" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/passwordInput"
                android:layout_alignTop="@+id/loginButton"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/app_signup"
                android:textAllCaps="false"
                android:textColor="@color/colorMyCpText" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_auto_login"
            android:textColor="@color/colorMyCpText" />

    </LinearLayout>


</LinearLayout>
